@@ -87,12 +87,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.testfx</groupId>
-            <artifactId>openjfx-monocle</artifactId>
-            <version>jdk-11+26</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.9.2</version>
@@ -125,7 +119,6 @@
                     <argLine>
                         ${mavenArgs}
                         --add-exports=javafx.graphics/com.sun.javafx.application=org.testfx
-                        --add-exports=javafx.graphics/com.sun.glass.ui=org.testfx.monocle
                     </argLine>
                     <systemPropertyVariables>
                         <!--suppress UnresolvedMavenProperty -->
